# engraft

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pr.yml  release.yml
e2e/: comparators.py  conftest.py  test_scenarios.py
e2e/fixtures/file-replace-basic/: template.yaml  values.yaml
e2e/fixtures/html-replace-basic/: template.yaml  values.yaml
e2e/fixtures/json-replace-basic/: template.yaml  values.yaml
e2e/fixtures/optional-variable-unset/: template.yaml  values.yaml
e2e/fixtures/regex-replace-both-syntaxes/: template.yaml  values.yaml
e2e/fixtures/rollback-on-action-failure/: template.yaml  values.yaml
e2e/fixtures/yaml-12-parity/: template.yaml  values.yaml
openspec/: config.yaml
openspec/changes/add-typescript-implementation/: design.md  proposal.md  tasks.md
openspec/changes/extend-pr-pipeline-to-typescript/: design.md  proposal.md  tasks.md
openspec/specs/cli/: spec.md
python/: README.md  pyproject.toml
python/src/engraft/: engine.py  models.py  yaml_loader.py
python/src/engraft/actions/: base.py  file_replace.py  html_replace.py  json_replace.py  regex_replace.py
python/tests/: test_cli.py  test_optional_variables.py  test_parse_values.py  test_yaml_loader.py
python/tests/test_actions/: test_regex_replace.py
src/engraft/: cli.py  engine.py  models.py
src/engraft/actions/: base.py  (+5 more)
tests/: test_cli.py  test_e2e.py  test_engine.py
tests/test_actions/: test_file_replace.py  test_html_replace.py  test_json_replace.py  test_regex_replace.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
typescript/src/: cli.ts  engine.ts  models.ts
typescript/tests/: cli.test.ts  engine.test.ts  models.test.ts
(+69 files in other folders)
