[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "engraft"
description = "Apply customizations to any project without templating placeholders"
dynamic = ["version"]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "lxml>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=7.0"]

[project.scripts]
engraft = "engraft.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/engraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
